--- a/Bai1.html
+++ b/Bai1.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <script>
-    let array = [7,11,5,-4,3,2,0,68,77,10];
+    let array = [7, 11, 5, -4, 3, 2, 0, 68, 77, 10];
     let count = 0;
     for (let i = 0; i <= array.length; i++) {
-        if(array[i]>=10){
-            count ++;
+        if (array[i] >= 10) {
+            count++;
         }
     }
     alert(count);
