--- a/Bai2.html
+++ b/Bai2.html
@@ -6,15 +6,15 @@
 </head>
 <body>
 <script>
-    let array = [7,11,5,-4,3,2,0,68,77,10];
+    let array = [7, 11, 5, -4, 3, 2, 0, 68, 77, 10];
     let max = array[0];
     let i = 1;
     for (; i < array.length; i++) {
-        if (max<array[i]){
+        if (max < array[i]) {
             max = array[i];
         }
     }
-    alert("Phan tu lon nhat trong mang la: "+max + " o vi tri thu " + i);
+    alert("Phan tu lon nhat trong mang la: " + max + " o vi tri thu " + i);
 </script>
 </body>
 </html>
