--- a/Bai5.html
+++ b/Bai5.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <script>
-    let array = [7,11,5,-4,3,2,0,68,77,10];
+    let array = [7, 11, 5, -4, 3, 2, 0, 68, 77, 10];
     let count = 0;
     for (let i = 0; i < array.length; i++) {
-        if (array[i]<0){
+        if (array[i] < 0) {
             count++;
         }
     }
